refactored router to remove unncessary routes and added ajax GET to request app list on load

--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -68,7 +68,7 @@
             <div class="rem-space-float description-holder">
 
               <div class="app-description">
-                {{{htmlDescription}}}
+                {{{description}}}
               </div>
 
               <div class="fade-box"></div>
