--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -1,6 +1,6 @@
 <template name="appItemFullWidth">
 
-  <div class="app-item-container full-width approved-{{app.approved}}">
+  <div class="app-item-container full-width">
 
     <div class="app-item-inner">
 
@@ -89,7 +89,7 @@
           <div class="rem-space-float description-holder">
 
             <div class="app-description">
-              {{{htmlDescription}}}
+              {{{description}}}
               <div class="fade-box"></div>
             </div>
 
