--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -13,7 +13,7 @@
   {{#with app}}
   <form class="edit-box clearfix validation">
 
-    {{#if parentAppMarket.notes}}
+    {{#if parentApp.notes}}
 
       <h3 class="title inline-block">Notes to the Author: </h3>
 
@@ -23,7 +23,7 @@
 
       <div class="spacer clearfix"></div>
 
-      {{> appNotesBox notes=parentAppMarket.notes}}
+      {{> appNotesBox notes=parentApp.notes}}
 
       <div class="spacer clearfix"></div>
 
@@ -62,7 +62,7 @@
       <div class="half-col">
 
         <h3 class="title" data-invalid={{validate 'name'}}>Title</h3>
-        {{#if changedOriginal}}<div class="admin-field">{{parentAppMarket.name}}</div>{{/if}}
+        {{#if changedOriginal}}<div class="admin-field">{{parentApp.name}}</div>{{/if}}
         {{#if fieldEdit 'name'}}
           <input type="text" data-field="name" value="{{name}}" required />
         {{else}}
@@ -70,7 +70,7 @@
         {{/if}}
 
         <h3 class="title">Author</h3>
-        <div class="read-only">{{parentAppMarket.authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
       </div>
 
@@ -83,10 +83,10 @@
       <div class="half-col">
 
         <h4 class="mini-title">Ported by</h4>
-        <div class="read-only">{{parentAppMarket.authorName}}</div>
+        <div class="read-only">{{parentApp.authorName}}</div>
 
         <h4 class="mini-title" data-invalid={{validate 'codeLink'}}>Code URL</h4>
-        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentAppMarket.codeLink}}</div>{{/if}}
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.codeLink}}</div>{{/if}}
         {{#if fieldEdit 'codeLink'}}
           <input type="text" data-field="codeLink" value="{{codeLink}}" pattern="https?://.+" />
         {{else}}
@@ -94,7 +94,7 @@
         {{/if}}
 
         <h4 class="mini-title" data-invalid={{validate 'license'}}>License</h4>
-        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentAppMarket.license}}</div>{{/if}}
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.license}}</div>{{/if}}
         {{#if fieldEdit 'license'}}
           <input type="text" data-field="license" value="{{license}}" />
         {{else}}
@@ -113,7 +113,7 @@
       <div class="half-col">
 
         <h4 class="mini-title" data-invalid={{validate 'webLink'}}>Website</h4>
-        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentAppMarket.webLink}}</div>{{/if}}
+        {{#if changedOriginal}}<div class="admin-field">{{verboseNone parentApp.webLink}}</div>{{/if}}
         {{#if fieldEdit 'webLink'}}
           <input type="text" data-field="webLink" value="{{webLink}}" />
         {{else}}
@@ -153,16 +153,16 @@
           <div>For the best results, we suggest the icon be:</div>
           <div><strong>600px</strong> wide by <strong>600px</strong> high (minimum) in PNG or JPEG format.</div>
 
-          {{#unless equal image parentAppMarket.image}}
+          {{#unless equal image parentApp.image}}
             <div class="identicon-container small">
-              <div class="identicon" style="background-image: url('{{parentAppMarket.image}}')" data-field="icon-image">#
+              <div class="identicon" style="background-image: url('{{parentApp.image}}')" data-field="icon-image">#
               </div>
             </div>
           {{/unless}}
 
         </div>
 
-        {{#unless equal image parentAppMarket.image}}
+        {{#unless equal image parentApp.image}}
         <div class="clearfix icon-captions">
           <div class="left">
             NEW ICON
@@ -209,7 +209,7 @@
 
       <h3 class="title">Description</h3>
 
-      {{> descriptionEditor initial=description original=parentAppMarket.htmlDescription}}
+      {{> descriptionEditor initial=description original=parentApp.description}}
 
     </div>
 
