Menu pages working as expected

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -24,7 +24,7 @@
 
             <div class="app-name">{{name}}</div>
 
-            <a href="{{getZippedPath 'appMarketAuthor' 'authorId' author}}"><div class="app-author">{{authorName}}</div></a>
+            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' authorName}}"><div class="app-author">{{authorName}}</div></a>
 
             <div class="app-rating">{{> appRating ratings=ratings simple=true}}</div>
 
@@ -61,7 +61,7 @@
 
           <div class="app-name">{{name}}</div>
 
-          <a href="{{getZippedPath 'appMarketAuthor' 'authorId' author}}"><div class="app-author">{{authorName}}</div></a>
+          <a href="{{getZippedPath 'appMarketAuthor' 'authorName' authorName}}"><div class="app-author">{{authorName}}</div></a>
 
           <div class="app-rating">
             {{> appRating ratings=ratings simple=true}}
