--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -26,7 +26,7 @@ $app-container-padding-rl: 4.6rem;
 
     .description {
 
-      overflow: auto;
+      overflow: hidden;
 
     }
 
@@ -182,6 +182,10 @@ $app-container-padding-rl: 4.6rem;
 
           a {
             color: #7d627c;
+          }
+          
+          &[data-tooltip] {
+            display: inline-block;
           }
 
         }
@@ -467,7 +471,8 @@ $app-container-padding-rl: 4.6rem;
 
     .read-more {
       display: inline-block;
-      padding: 0.5rem 1rem 0 1rem;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+      margin-top: 0.5rem;
       border-top: 1px solid #cfb5d6;
       font-size: 1.9rem;
       color: #783189;
@@ -607,6 +612,7 @@ $app-container-padding-rl: 4.6rem;
         left: 0.6rem;
         background-position: center;
         background-size: cover;
+        cursor: pointer;
 
       }
 
