--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -447,6 +447,7 @@ $app-container-padding-rl: 4.6rem;
 }
 
 .description {
+  position: relative;
 
   .text {
 
@@ -460,6 +461,22 @@ $app-container-padding-rl: 4.6rem;
 
     &.min-height {
       min-height: 28rem;
+    }
+    
+    &.max-height {
+      max-height: 28rem;
+    }
+    
+    .fade-box {
+      position: absolute;
+      height: 5rem;
+      bottom: 3.4rem;
+      width: 100%;
+      background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+      
+      &.hidden {
+        display: none;
+      }
     }
 
   }
