Changed app doc references from authorName to author.name and prevented app tile redirect if the user has actually clicked on an anchor tag

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -24,7 +24,7 @@
 
             <div class="app-name">{{name}}</div>
 
-            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' authorName}}"><div class="app-author">{{authorName}}</div></a>
+            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
 
             <div class="app-rating">{{> appRating ratings=ratings simple=true}}</div>
 
@@ -57,7 +57,7 @@
 
           <div class="app-name">{{name}}</div>
 
-          <a href="{{getZippedPath 'appMarketAuthor' 'authorName' authorName}}"><div class="app-author">{{authorName}}</div></a>
+          <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
 
           <div class="app-rating">
             {{> appRating ratings=ratings simple=true}}
