Added AggregateReviews collection, which is populated when a review is added/updated/removed. Aggregate Reviews auto-published and displayed as appropriate

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -26,7 +26,7 @@
 
             <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
 
-            <div class="app-rating">{{> appRating ratings=ratings simple=true}}</div>
+            <div class="app-rating">{{> appRating app=this simple=true}}</div>
 
             <div class="install-price">
 
@@ -60,7 +60,7 @@
           <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
 
           <div class="app-rating">
-            {{> appRating ratings=ratings simple=true}}
+            {{> appRating app=this simple=true}}
           </div>
 
           {{#if ../../../installPage}}
