updated markdown config

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -89,7 +89,7 @@
           <div class="rem-space-float description-holder">
 
             <div class="app-description">
-              {{{description}}}
+              {{#markdown}}{{shortDescription}}{{/markdown}}
               <div class="fade-box"></div>
             </div>
 
