--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="app-description">
-              {{{description}}}
+              {{#markdown}}{{shortDescription}}{{/markdown}}
               <div class="fade-box"></div>
             </div>
 
