--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -110,9 +110,7 @@
               {{/if}} -->
 
               <div class="text {{#unless extendedDescription}}padded{{/unless}} {{#if flagApp}}min-height{{/if}} {{#unless readMore}}max-height{{/unless}}">
-                {{#markdown}}
-                  {{description}}
-                {{/markdown}}
+                {{#markdown}}{{description}}{{/markdown}}
                 <div class="fade-box {{#if readMore}}hidden{{/if}}"></div>
               </div>
 
