--- a/app/client/templates/login/login.scss
+++ b/app/client/templates/login/login.scss
@@ -53,6 +53,13 @@
         text-align: center;
         vertical-align: top;
         width: 35%;
+        margin-left: 32.5%;
+        margin-right: 32.5%;
+        
+        @media (max-width: $small-tablet) {
+          margin-left: 0;
+          margin-right: 0;
+        }
 
         .button-block {
           .sandstorm-button {
