removed TODO in upload-an-app href

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -14,7 +14,7 @@
     </a>
     {{/if}}
 
-    <a class="menu-link {{inRouteCategory 'upload'}} hide-for-phone" href="TODO">
+    <a class="menu-link {{inRouteCategory 'upload'}} hide-for-phone" href="#">
       <i class="icon-upload"></i>
       <div class="menu-text">Upload an App</div>
     </a>
