Make sure installed apps doesn't appear even for legacy users

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -7,7 +7,7 @@
       <div class="menu-text">App Market</div>
     </a>
 
-    {{#if installHistoryCount}}
+    {{#if false}}
     <a class="menu-link {{inRouteCategory 'installedApps'}}" href="{{getPath 'installedApps'}}">
       <i class="icon-apps"></i>
       <div class="menu-text">Install History</div>
