Fixed broken link from unsuccessful search page

--- a/app/client/templates/search/search.html
+++ b/app/client/templates/search/search.html
@@ -32,7 +32,7 @@
 
       <div class="title-message">Sorry, I can't find any matching apps.</div>
 
-      <div class="subtitle-message">Would you like to browse the <a href="{{getPath 'appMarketGenre' 'genre' 'Popular'}}">most popular</a> apps we have in the store?</div>
+      <div class="subtitle-message">Would you like to browse the <a href="{{getZippedPath 'appMarketGenre' 'genre' 'Popular'}}">most popular</a> apps we have in the store?</div>
 
       {{/if}}
 
