Fixed host modal problems

--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -34,7 +34,7 @@
 
       <div class="sandstorm-input">
         <div class="input">
-          <input type="url" required=true data-field="new-host" placeholder="Add a new server" />
+          <input type="url" required=true data-field="new-host" placeholder="https://your-server.io" />
         </div>
         <div class="button" data-action="add-host">
           <i class="fa fa-plus"></i>
