Corrected app tile fade box for long descriptions

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -32,7 +32,7 @@
 
             <div class="app-description">
               {{#markdown}}{{shortDescription}}{{/markdown}}
-              <div class="fade-box"></div>
+              <div class="fade-box {{#unless textOverflow}}hidden{{/unless}}"></div>
             </div>
 
           </div>
