Support `upstreamAuthor` field.
When the person who built the package is not the original author, this field names the original author (according to the porter). In this case we mainly display the upstream author but we add the "ported by" field to the metadata naming the porter.

The verified github and twitter links are always for the person who built the package. At some point we will need some design work to make this clearer, perhaps placing these icons next to the "ported by" field when there is an upstream author.

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -18,7 +18,11 @@
 
             <div class="app-name">{{name}}</div>
 
-            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
+            {{#if upstreamAuthor}}
+              <div class="app-author">{{upstreamAuthor}}</div>
+            {{else}}
+              <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
+            {{/if}}
 
             <div class="app-rating">{{> appRating app=this simple=true}}</div>
 
@@ -51,7 +55,11 @@
 
           <div class="app-name">{{name}}</div>
 
-          <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
+          {{#if upstreamAuthor}}
+            <div class="app-author">{{upstreamAuthor}}</div>
+          {{else}}
+            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
+          {{/if}}
 
           <div class="app-rating">
             {{> appRating app=this simple=true}}
