--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -30,7 +30,13 @@
 
                   <div class="header">{{name}}</div>
 
-                  <div class="app-author-full-width"><a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a></div>
+                  <div class="app-author-full-width">
+                    {{#if upstreamAuthor}}
+                      {{upstreamAuthor}}
+                    {{else}}
+                      <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a>
+                    {{/if}}
+                  </div>
 
                 </div>
 
@@ -47,7 +53,9 @@
 
                 <div class="half-col">
 
-                  <div class="key">Ported by:</div><div class="value">{{author.name}}&nbsp;</div>
+                  {{#if upstreamAuthor}}
+                    <div class="key">Ported by:</div><div class="value"><a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a>&nbsp;</div>
+                  {{/if}}
                   <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
                   <div class="key">Code:</div><div class="value">{{{codeFormat codeLink}}}&nbsp;</div>
                   <div class="key">Version:</div><div class="value" data-tooltip={{renderedChangelog}} data-tooltip-direction="s">{{version}}&nbsp;</div>
