--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -28,7 +28,13 @@
 
             <div class="app-name-full-width">{{#if name}}{{name}}{{else}}Untitled{{/if}}</div>
 
-            <div class="app-author-full-width">{{authorName}}</div>
+            <div class="app-author-full-width">
+              {{#if upstreamAuthor}}
+                {{upstreamAuthor}}
+              {{else}}
+                {{author.name}}
+              {{/if}}
+            </div>
 
           </div>
 
@@ -79,7 +85,9 @@
 
             <div class="divider"></div>
 
-            <div class="key">Ported by:</div><div class="value">{{authorName}}&nbsp;</div>
+            {{#if upstreamAuthor}}
+              <div class="key">Ported by:</div><div class="value"><a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a>&nbsp;</div>
+            {{/if}}
             <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
             <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
             <div class="key">Version:</div><div class="value">{{verboseNone latestVersionNumber}}&nbsp;</div>
