Fetch app description on-demand for "large" app-item.
This means we no longer need to place short descriptions in the index.

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -97,7 +97,11 @@
           <div class="rem-space-float description-holder">
 
             <div class="app-description">
-              {{#markdown}}{{shortDescription}}{{/markdown}}
+              {{#if ensureDetailsFetched _id}}
+                {{#markdown}}{{description}}{{/markdown}}
+              {{else}}
+                {{shortDescription}}
+              {{/if}}
               <div class="fade-box"></div>
             </div>
 
