Clicking install should redirect current tab, not open a new one.

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -28,7 +28,7 @@
 
             <div class="install-price">
 
-              <a href="{{fullInstallLink}}" target="_blank" class="app-install {{appInstalled.cssClass}}" data-action="install-app">
+              <a href="{{fullInstallLink}}" class="app-install {{appInstalled.cssClass}}" data-action="install-app">
                 {{appInstalled.buttonText}} <i class="icon-arrow-install"></i>
               </a>
 
@@ -71,7 +71,7 @@
 
           <div class="install-price">
 
-            <a href="{{fullInstallLink}}" target="_blank" class="app-install {{appInstalled.cssClass}}" data-action="install-app">
+            <a href="{{fullInstallLink}}" class="app-install {{appInstalled.cssClass}}" data-action="install-app">
               {{appInstalled.buttonText}} <i class="icon-arrow-install"></i>
             </a>
 
