--- a/app/client/templates/components/getSandstormHost.html
+++ b/app/client/templates/components/getSandstormHost.html
@@ -19,7 +19,7 @@
     <div class="hosts">
       {{#each hosts}}
       <div class="host-container">
-        <a href={{installUrl}} target="_blank" class="sandstorm-button primary" data-action="install">
+        <a href={{installUrl}} class="sandstorm-button primary" data-action="install">
           {{this}}
           <i class="fa fa-times" data-action="remove-host"></i>
         </a>
