--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -83,7 +83,7 @@
 
                 <div class="action-buttons">
 
-                  <a href="{{fullInstallLink}}" target="_blank" class="{{#if installed}}installed{{else}}install{{/if}} button" data-action="install-app">
+                  <a href="{{fullInstallLink}}" class="{{#if installed}}installed{{else}}install{{/if}} button" data-action="install-app">
                     INSTALL{{#if installed}}+{{/if}} <i class="icon-arrow-install"></i>
                   </a>
 
