Replace author names with short descriptions in tile view.

--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -18,11 +18,7 @@
 
             <div class="app-name">{{name}}</div>
 
-            {{#if upstreamAuthor}}
-              <div class="app-author">{{upstreamAuthor}}</div>
-            {{else}}
-              <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
-            {{/if}}
+            <div class="app-short-description">{{shortDescription}}</div>
 
             <div class="app-rating">{{> appRating app=this simple=true}}</div>
 
@@ -59,11 +55,7 @@
 
           <div class="app-name">{{name}}</div>
 
-          {{#if upstreamAuthor}}
-            <div class="app-author">{{upstreamAuthor}}</div>
-          {{else}}
-            <a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}"><div class="app-author">{{author.name}}</div></a>
-          {{/if}}
+          <div class="app-short-description">{{shortDescription}}</div>
 
           <div class="app-rating">
             {{> appRating app=this simple=true}}
