--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -43,6 +43,7 @@ $app-box-bg: #ffffff;
 $app-box-drp-shdw: #a694b2;
 $app-name-text: #222222;
 $app-author-text: #783189;
+$app-short-description-text: #222222;
 $app-install-text: #783189;
 $app-installed-text: #b491bc;
 $app-description-text: #222222;
@@ -158,6 +159,9 @@ $app-image-large-margin-right: 2.5rem;
 $app-name-font-size: 1.667rem;
 $app-name-large-font-size: 2.9rem;
 $app-name-line-height: 4.15rem;
+$app-short-description-font-size: 1.4rem;
+$app-short-description-large-font-size: 1.667rem;
+$app-short-description-line-height: 2.5rem;
 $app-author-font-size: 1.4rem;
 $app-author-large-font-size: 1.667rem;
 $app-author-line-height: 2.5rem;
