Improve app author vs. ported by distinction.
We now always put the packager (who signed the package) on the left. If there is an upstream author, then we add "ported by" to the packager name and put the upstream author name on the right.

Also in this change: Make sure the detail fields (license, etc.) get pushed all the way right as in the mockups.

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -29,12 +29,15 @@
             <div class="app-name-full-width">{{#if name}}{{name}}{{else}}Untitled{{/if}}</div>
 
             <div class="app-author-full-width">
-              {{#if upstreamAuthor}}
-                {{upstreamAuthor}}
-              {{else}}
-                {{author.name}}
-              {{/if}}
+              {{#if upstreamAuthor}}Ported by:{{/if}}
+              {{author.name}}
             </div>
+
+            {{#if upstreamAuthor}}
+              <div class="upstream-author">
+                Upstream author: <a>{{upstreamAuthor}}</a>
+              </div>
+            {{/if}}
 
           </div>
 
@@ -85,9 +88,6 @@
 
             <div class="divider"></div>
 
-            {{#if upstreamAuthor}}
-              <div class="key">Ported by:</div><div class="value"><a href="{{getZippedPath 'appMarketAuthor' 'authorName' author.name}}">{{author.name}}</a>&nbsp;</div>
-            {{/if}}
             <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
             <div class="key">Code:</div><div class="value">{{verboseNone codeLink}}&nbsp;</div>
             <div class="key">Version:</div><div class="value">{{verboseNone latestVersionNumber}}&nbsp;</div>
