--- a/app/client/templates/components/app-item-full-width.scss
+++ b/app/client/templates/components/app-item-full-width.scss
@@ -102,6 +102,14 @@
           }
         }
 
+        .upstream-author {
+          clear: left;
+          font-size: 1.7rem;
+          a {
+            color: #783189;
+          }
+        }
+
       }
 
       .bottom-section {
