Disable "popular" and remove limits on items displayed.
"Popular" currently doesn't make sense as we do not have stats.

Dynamically calculating the length of a row had responsiveness issues and also made it unclear that the category had more items. Now we display everything but let it overflow off to the right.

Dynamically loading more categories as you scroll was no longer useful now that the entire index is downloaded upfront. It also was confusing because there was no visual indicator that more categories had been loaded other than the scroll bar jumping.

Perhaps one day we'll bring back the progressive loading -- when we have enough apps for that.

--- a/app/client/templates/components/app-table.scss
+++ b/app/client/templates/components/app-table.scss
@@ -17,3 +17,31 @@
   }
 
 }
+
+.app-table {
+  white-space: nowrap;
+  overflow: hidden;
+  position: relative;
+  width: calc(100% + #{$app-container-margin-lr});
+
+  .genre-other-section & {
+    white-space: normal;
+  }
+
+/* TODO(someday): Experiment with this right-side fade-out a bit more...
+  &::after {
+    content: " ";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 16px;
+    background: linear-gradient(to right, rgba($main-page-bg, 0), rgba($main-page-bg, 1));
+
+    .genre-popular-section & {
+      background: linear-gradient(to right, rgba($genre-popular-bg, 0), rgba($genre-popular-bg, 1));
+    }
+  }
+*/
+}
