Do not try to store display names in 'username' field, which Meteor requires to be unique if present. We shouldn't use 'username' at all.

--- a/app/client/templates/components/menu.html
+++ b/app/client/templates/components/menu.html
@@ -21,7 +21,7 @@
 
     <a class="menu-link {{inRouteCategory 'login'}}" href="{{getPath 'login'}}">
       <i class="icon-my"></i>
-      <div class="menu-text">{{#if currentUser}}{{currentUser.username}}{{else}}Log In{{/if}}</div>
+      <div class="menu-text">{{#if currentUser}}{{currentUser.profile.name}}{{else}}Log In{{/if}}</div>
     </a>
 
   </nav>
