--- a/app/client/templates/login/login.html
+++ b/app/client/templates/login/login.html
@@ -13,7 +13,7 @@
         {{#if currentUser}}
 
           <div class="user-info">
-            Logged in as <span class="username">{{currentUser.username}}</span>
+            Logged in as <span class="username">{{currentUser.profile.name}}</span>
           </div>
 
           <div class="button-block">
