Use a table to render app details rather than crazy floats which lead to weird layout issues.

--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -51,10 +51,11 @@
                 </div>
 
                 <div class="half-col right">
-
-                  <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
-                  <div class="key">Code:</div><div class="value">{{{codeFormat codeLink}}}&nbsp;</div>
-                  <div class="key">Version:</div><div class="value" data-tooltip={{renderedChangelog}} data-tooltip-direction="s">{{version}}&nbsp;</div>
+                  <table>
+                    <tr><td class="key">License:</td><td class="value">{{verboseNone license}}&nbsp;</td></tr>
+                    <tr><td class="key">Code:</td><td class="value">{{{codeFormat codeLink}}}&nbsp;</td></tr>
+                    <tr><td class="key">Version:</td><td class="value" data-tooltip={{renderedChangelog}} data-tooltip-direction="s">{{version}}&nbsp;</td></tr>
+                  </table>
 
                 </div>
 
